--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,11 +3,25 @@
 }
 
 body {
+  height: 100%;
   margin: 0;
   font-family: Inter, sans-serif;
   background-color: #fafaf8;
+
 }
 
+main {
+
+  background-image: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url('../horrorwp.jpg');
+  background-size: cover;
+  background-position: center;
+  height: 100%;
+  background-attachment: fixed;
+  background-blend-mode: darken;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+}
 
 header {
   display: flex;
@@ -28,215 +42,36 @@ header>h1 {
 
 }
 
-main {
-  padding: 30px 30px 10px;
-}
-
-.add-ingredient-form {
+.story-container {
+  padding-top: 100px;
   display: flex;
+  gap: 10px;
+  opacity: 0.6;
   justify-content: center;
-  gap: 12px;
-  height: 38px;
-}
-
-.add-ingredient-form>input {
-  border-radius: 6px;
-  border: 1px solid #d1d5db;
-  padding: 9px 13px;
-  box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.05);
-  flex-grow: 1;
-  min-width: 150px;
-  max-width: 400px;
-}
-
-.add-ingredient-form>button {
-  font-family: Inter, sans-serif;
-  border-radius: 6px;
-  border: none;
-  background-color: #141413;
-  color: #fafaf8;
-  width: 150px;
-  font-size: 0.875rem;
-  font-weight: 500;
-}
-
-.add-ingredient-form>button::before {
-  content: "+";
-  margin-right: 10px;
-
-}
-
-
-.container {
-  display: flex;
+  align-items: center;
   flex-direction: column;
+  width: 700px;
+
 }
 
-.container>h1 {
-  font-size: 1.5rem;
-  margin-top: 0;
-}
-
-.counter {
+.story-title {
   display: flex;
-  align-items: flex-end;
-  align-self: center;
-  margin-top: 40px;
+  justify-content: left;
+  width: 700px;
+
 }
 
-.counter>button {
-  height: 50px;
-  width: 50px;
-  border-radius: 50%;
-  border: none;
-  cursor: pointer;
-  background-color: #737373;
-  color: #D9D9D9;
-  font-size: 1.5rem;
-}
-
-.counter>button:hover {
-  background-color: #404040;
-  color: #D9D9D9;
-}
-
-.count {
-  background-color: white;
-  height: 100px;
-  width: 100px;
-  border-radius: 50%;
+.story {
   display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
   justify-content: center;
-  align-items: center;
-  color: #262626;
-  margin-block: 0 10px;
-  font-size: 2rem;
-}
-
-.plus {
-  margin-left: -20px;
-}
-
-.minus {
-  margin-right: -20px;
-  z-index: 1;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-body {
-  margin: 0;
-  font-family: Inter, sans-serif;
-  background-color: #FAFAF8;
-}
-
-header {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 11px;
-  height: 80px;
-  background-color: white;
-  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.10), 0px 1px 2px 0px rgba(0, 0, 0, 0.06);
-}
-
-header>img {
-  width: 50px;
-}
-
-header>h1 {
-  font-weight: 400;
-}
-
-main {
-  padding: 30px 30px 10px;
-}
-
-.add-ingredient-form {
-  display: flex;
-  justify-content: center;
-  gap: 12px;
-  height: 38px;
-}
-
-.add-ingredient-form>input {
-  border-radius: 6px;
-  border: 1px solid #D1D5DB;
-  padding: 9px 13px;
-  box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.05);
-  flex-grow: 1;
-  min-width: 150px;
-  max-width: 400px;
-}
-
-.add-ingredient-form>button {
-  font-family: Inter, sans-serif;
-  border-radius: 6px;
-  border: none;
-  background-color: #141413;
-  color: #FAFAF8;
-  width: 150px;
-  font-size: 0.875rem;
-  font-weight: 500;
-}
-
-.add-ingredient-form>button::before {
-  content: "+";
-  margin-right: 5px;
-}
-
-ul.ingredients-list {
-  margin-bottom: 48px;
-}
-
-ul.ingredients-list>li {
-  color: #475467;
-  line-height: 28px;
-}
-
-.get-recipe-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  border-radius: 8px;
-  background: #F0EFEB;
-  padding: 10px 28px;
-}
-
-.get-recipe-container h3 {
-  font-size: 1.125rem;
-  font-weight: 500;
-  line-height: 24px;
-}
-
-.get-recipe-container p {
-  color: #6B7280;
-  font-size: 0.875rem;
-  line-height: 20px;
-}
-
-.get-recipe-container button {
-  border: none;
-  border-radius: 6px;
-  background: #D17557;
-  box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.05);
-  color: #FAFAF8;
-  padding: 9px 17px;
-  font-family: Inter, sans-serif;
-  font-size: 0.875rem;
-  cursor: pointer;
-}
-
-.suggested-recipe-container {
-  color: #475467;
-  line-height: 28px;
-  font-size: 1.125rem;
-  font-weight: 400;
-}
-
-.suggested-recipe-container ul li,
-.suggested-recipe-container ol li {
-  margin-bottom: 8px;
+  gap: 1rem;
+  font-size: large;
+  line-height: 1.6;
+  background-color: aliceblue;
+  padding: 0 1em;
+  margin-bottom: 50px;
+  border-radius: 3px;
+  border: 3px
 }
