--- a/client/src/index.css
+++ b/client/src/index.css
@@ -30,7 +30,8 @@ header {
   gap: 11px;
   height: 80px;
   box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.10), 0px 1px 2px 0px rgba(0, 0, 0, 0.06);
-  background-color: white;
+  background-color: black;
+
 }
 
 header>img {
@@ -39,6 +40,7 @@ header>img {
 
 header>h1 {
   font-weight: 400;
+  color: #040556;
 
 }
 
