--- a/client/src/index.css
+++ b/client/src/index.css
@@ -40,12 +40,12 @@ header>img {
 
 header>h1 {
   font-weight: 400;
-  color: #040556;
+  color: #b026ff;
 
 }
 
 .story-container {
-  padding-top: 100px;
+  padding-top: 10px;
   display: flex;
   gap: 10px;
   opacity: 0.6;
@@ -68,12 +68,16 @@ header>h1 {
   flex-wrap: wrap;
   align-items: flex-start;
   justify-content: center;
-  gap: 1rem;
+
   font-size: large;
-  line-height: 1.6;
+  line-height: 1.4;
   background-color: aliceblue;
   padding: 0 1em;
   margin-bottom: 50px;
   border-radius: 3px;
   border: 3px
+}
+
+.story p {
+  white-space: pre-wrap;
 }
